...
      label: 'Rescue',
      iconAsset: 'assets/icons/navigation/rescue.png',
      route: '/rescue',
      activePrefix: '/rescue',
    ),
    PawMateBottomNavDestination(
      label: 'Profile',
      iconAsset: 'assets/icons/navigation/profile.png',
      route: '/profile',
      activePrefix: '/profile',
    ),
  ];

...
